--- a/src/app/componenti/header/header.component.html
+++ b/src/app/componenti/header/header.component.html
@@ -3,6 +3,6 @@
     <app-menu-mobile></app-menu-mobile>
   </div>
   <div class="center-section">
-    <span>Company</span>
+    <h1>Company</h1>
   </div>
 </header>
