--- a/src/app/componenti/lista-utenti/lista-utenti.component.html
+++ b/src/app/componenti/lista-utenti/lista-utenti.component.html
@@ -1,7 +1,7 @@
 
-<h1>Lista utenti</h1>
+<h2>Lista utenti</h2>
 
-<div class="table-container">
+<div class="scrollable-container">
   <table mat-table [dataSource]="dataSource" >
     <!-- Colonne della tabella -->
     <ng-container matColumnDef="name">
