--- a/src/app/componenti/lista-utenti/lista-utenti.component.css
+++ b/src/app/componenti/lista-utenti/lista-utenti.component.css
@@ -6,10 +6,12 @@
 
 overflow-x:visible;
 overflow-y: visible;
+height: auto;
 }
 
 .auto_scroll{
 
   overflow-x:auto;
   overflow-y: auto;
+  height: auto;
   }
