--- a/src/app/componenti/aggiungi-utente/aggiungi-utente.component.css
+++ b/src/app/componenti/aggiungi-utente/aggiungi-utente.component.css
@@ -5,19 +5,20 @@
 .form-row {
   display: flex;
   flex-direction: row;
+
 }
 
 .form-field {
   flex: 1;
   margin-right: 10px;
   margin-left: 10px;
+
 }
 
 .form-container {
   display: grid;
   grid-template-rows: auto 1fr auto;
-  height: 100%;
-  overflow-y: hidden;
+  height: auto;
 }
 
 .form-actions {
@@ -26,4 +27,5 @@
   justify-content: flex-end; /* Allinea il pulsante a destra */
   margin-top: 16px; /* Aggiungi uno spazio sopra il pulsante */
   margin-right: 10px;
+
 }
