--- a/src/app/componenti/menu-mobile/menu-mobile.component.html
+++ b/src/app/componenti/menu-mobile/menu-mobile.component.html
@@ -1,9 +1,9 @@
-<button mat-icon-button [matMenuTriggerFor]="menu">
-  <mat-icon>menu</mat-icon>
-</button>
+<mat-icon-button [matMenuTriggerFor]="menu" (click)="toggleMenu()">
+  <mat-icon>{{ isMenuOpen ? 'close' : 'menu' }}</mat-icon>
+</mat-icon-button>
 
 
-<mat-menu #menu="matMenu">
+<mat-menu #menu="matMenu" [class.open]="isMenuOpen" (closed)="onMenuClosed()">
   <ng-template matMenuContent>
     <button mat-menu-item (click)="navigateToRoute('/ListaUtenti')" class="custom-menu-item">Lista utenti</button>
     <button mat-menu-item (click)="navigateToRoute('/AggiungiUtente')" class="custom-menu-item">Aggiungi utente</button>
