--- a/src/app/componenti/lista-utenti/lista-utenti.component.html
+++ b/src/app/componenti/lista-utenti/lista-utenti.component.html
@@ -2,7 +2,7 @@
 <h2>Lista utenti</h2>
 
 
-<div [ngClass]="{'scrollable': this.isMobile , 'auto_scroll' : !this.isMobile}">
+<div [ngClass]="{'scrollable': formService.isMobile , 'auto_scroll' : !formService.isMobile}">
   <table mat-table [dataSource]="dataSource" >
     <!-- Colonne della tabella -->
     <ng-container matColumnDef="name">
