--- a/src/app/componenti/dashboard/dashboard.component.html
+++ b/src/app/componenti/dashboard/dashboard.component.html
@@ -1,15 +1,12 @@
-
-
 <mat-sidenav-container class="mat-sidenav-container">
   <mat-sidenav mode="side" opened *ngIf="formService.isDesktop" class="mat-sidenav">
     <mat-list role="list">
       <mat-list-item role="listitem" routerLink="ListaUtenti" [routerLinkActive]="'active'">Lista Utenti</mat-list-item>
-      <mat-list-item role="listitem" routerLink="AggiungiUtente" [routerLinkActive]="'active'">AggiungiUtente</mat-list-item>
+      <mat-list-item role="listitem" routerLink="AggiungiUtente"
+        [routerLinkActive]="'active'">AggiungiUtente</mat-list-item>
     </mat-list>
   </mat-sidenav>
-    <mat-sidenav-content>
-     <router-outlet></router-outlet>
-    </mat-sidenav-content>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
 </mat-sidenav-container>
-
-
