Modificato resizeService per utilizzare BehaviourSubject

--- a/src/app/componenti/dashboard/dashboard.component.html
+++ b/src/app/componenti/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="mat-sidenav-container">
-  <mat-sidenav mode="side" opened *ngIf="resizeService.isDesktop" class="mat-sidenav">
+  <mat-sidenav mode="side" opened *ngIf="!isMobile" class="mat-sidenav">
     <mat-list role="list">
       <mat-list-item role="listitem" routerLink="ListaUtenti" [routerLinkActive]="'active'">Lista Utenti</mat-list-item>
       <mat-list-item role="listitem" routerLink="AggiungiUtente"
