--- a/src/app/componenti/header/header.component.html
+++ b/src/app/componenti/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="left-section" *ngIf="resizeService.isMobile">
+  <div class="left-section" *ngIf="isMobile">
     <app-menu-mobile></app-menu-mobile>
   </div>
   <div class="center-section">
