--- a/src/app/componenti/lista-utenti/lista-utenti.component.html
+++ b/src/app/componenti/lista-utenti/lista-utenti.component.html
@@ -1,7 +1,7 @@
 <h2>Lista utenti</h2>
 
 
-<div [ngClass]="{'scrollable': resizeService.isMobile , 'auto_scroll' : !resizeService.isMobile}">
+<div [ngClass]="{'scrollable': isMobile , 'auto_scroll' : !isMobile}">
   <table mat-table [dataSource]="dataSource">
     <!-- Colonne della tabella -->
     <ng-container matColumnDef="name">
