--- a/src/app/componenti/indirizzo/indirizzo.component.html
+++ b/src/app/componenti/indirizzo/indirizzo.component.html
@@ -7,8 +7,9 @@
       <mat-form-field appearance="fill" class="form-field">
         <mat-label>Via</mat-label>
         <!--Valido solo se compilato -->
-        <input matInput type="text" name="via" formControlName="via">
-        <mat-error *ngIf="!addressFormGroup!.valid">Situazione non corretta</mat-error>
+        <input matInput type="text" name="via" formControlName="via" [class.required]="checkAddressFieldMissing() &&  !addressFormGroup.get('via')?.value">
+        <!--Da capire perchè in questo componente mat-error non funzione-->
+        <p *ngIf="checkAddressFieldMissing() &&  !addressFormGroup.get('via')?.value">Campo obbligatorio</p>
       </mat-form-field>
 
     </div>
@@ -18,16 +19,22 @@
       <mat-form-field appearance="fill" class="form-field">
         <mat-label>Città</mat-label>
         <!--Valido solo se compilato -->
-        <input matInput type="text" name="citta" formControlName="citta">
-        <mat-error *ngIf="!addressFormGroup!.valid">Situazione non corretta</mat-error>
+        <!--<input matInput type="text" name="citta" formControlName="citta" [class.required]="addressFormGroup!.errors!['addressFieldMissing']">-->
+
+        <input matInput type="text" name="citta" formControlName="citta" [class.required]="checkAddressFieldMissing() && !addressFormGroup.get('citta')?.value">
+
+
+        <!--Da capire perchè in questo componente mat-error non funzione-->
+        <p *ngIf="checkAddressFieldMissing() && !addressFormGroup.get('citta')?.value">Campo obbligatorio</p>
       </mat-form-field>
 
 
       <mat-form-field appearance="fill" class="form-field">
         <mat-label>Numero</mat-label>
         <!--Valido solo se compilato -->
-        <input matInput type="text" name="numero" formControlName="numero">
-        <mat-error *ngIf="!addressFormGroup!.valid">Situazione non corretta</mat-error>
+        <input matInput type="text" name="numero" formControlName="numero" [class.required]="checkAddressFieldMissing() && !addressFormGroup.get('numero')?.value">
+         <!--Da capire perchè in questo componente mat-error non funzione-->
+        <p *ngIf="checkAddressFieldMissing() && !addressFormGroup.get('numero')?.value">Campo obbligatorio</p>
       </mat-form-field>
 
     </div>
