Aggiunte classi css per layout campi mancanti indirizzo

--- a/src/app/componenti/indirizzo/indirizzo.component.css
+++ b/src/app/componenti/indirizzo/indirizzo.component.css
@@ -6,6 +6,16 @@
   font-weight: bold;
 }
 
+.required-par {
+  color: red;
+}
+
+
+
+.required-star::after {
+  content: "*";
+  color: red;
+}
 
 .form-container {
   display: grid;
